Layout shifting fixed

--- a/public/style.css
+++ b/public/style.css
@@ -75,6 +75,8 @@ footer {
   background-color: #e9ecef;
   padding: 24px;
   border-radius: 2px;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 #canvas {
